// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyTheme renders correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); padding: 16px 16px 16px 16px;"
/>
`;

exports[`modes renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(238, 237, 253); padding: 16px 16px 16px 16px;"
/>
`;

exports[`modes renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-family: inherit; font-size: 16px;"
  >
    hello world
  </div>
</div>
`;

exports[`modes should render correctly when colorMode is set globally 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); color: rgb(238, 237, 253);"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(238, 237, 253); font-family: inherit; font-size: 16px;"
  >
    hello world
  </div>
</div>
`;

exports[`modes should render correctly when colorMode set as prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); color: rgb(238, 237, 253);"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-family: inherit; font-size: 16px;"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Box.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-family: inherit; font-size: 16px;"
  >
    hello world
  </div>
</div>
`;

exports[`props should assign a ref 1`] = `
<div
  class="css-view-1dbjc4n"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-family: inherit; font-size: 16px;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
/>
`;

exports[`props should render correctly for a borderRadius of 0 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 0px; border-bottom-right-radius: 0px; border-top-left-radius: 0px; border-top-right-radius: 0px;"
/>
`;

exports[`props should render correctly for a borderRadius of 1 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 2px; border-bottom-right-radius: 2px; border-top-left-radius: 2px; border-top-right-radius: 2px;"
/>
`;

exports[`props should render correctly for a borderRadius of 2 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border-top-left-radius: 4px; border-top-right-radius: 4px;"
/>
`;

exports[`props should render correctly for a borderRadius of 3 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px;"
/>
`;

exports[`props should render correctly for a borderRadius of 4 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 8px; border-bottom-right-radius: 8px; border-top-left-radius: 8px; border-top-right-radius: 8px;"
/>
`;

exports[`props should render correctly for a borderRadius of 5 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; border-top-left-radius: 16px; border-top-right-radius: 16px;"
/>
`;

exports[`props should render correctly for a borderRadius of 6 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 32px; border-bottom-right-radius: 32px; border-top-left-radius: 32px; border-top-right-radius: 32px;"
/>
`;

exports[`props should render correctly for a borderRadius of default 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-bottom-left-radius: 6px; border-bottom-right-radius: 6px; border-top-left-radius: 6px; border-top-right-radius: 6px;"
/>
`;

exports[`props should render correctly for a custom border 1`] = `
<div
  class="css-view-1dbjc4n"
  style="border-top-color: rgba(230,230,235,1.00); border-right-color: rgba(230,230,235,1.00); border-bottom-color: rgba(230,230,235,1.00); border-left-color: rgba(230,230,235,1.00); border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px;"
/>
`;

exports[`props should render correctly for an alignX of center 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: center; display: flex; flex-direction: column;"
/>
`;

exports[`props should render correctly for an alignX of left 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-start; display: flex; flex-direction: column;"
/>
`;

exports[`props should render correctly for an alignX of right 1`] = `
<div
  class="css-view-1dbjc4n"
  style="align-items: flex-end; display: flex; flex-direction: column;"
/>
`;

exports[`props should render correctly for an alignY of bottom 1`] = `
<div
  class="css-view-1dbjc4n"
  style="display: flex; flex-direction: column; justify-content: flex-end;"
/>
`;

exports[`props should render correctly for an alignY of center 1`] = `
<div
  class="css-view-1dbjc4n"
  style="display: flex; flex-direction: column; justify-content: center;"
/>
`;

exports[`props should render correctly for an alignY of top 1`] = `
<div
  class="css-view-1dbjc4n"
  style="display: flex; flex-direction: column; justify-content: flex-start;"
/>
`;

exports[`props should render correctly for an altitude 1`] = `
<div
  class="css-view-1dbjc4n"
  style="box-shadow: 0px 6px 24px rgba(0,0,0,0.15);"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); color: rgb(255, 255, 255);"
/>
`;

exports[`props should render correctly with a color CSS prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(217, 217, 225); color: rgb(87, 79, 235);"
/>
`;

exports[`props should render correctly with a color CSS prop 2`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(217, 217, 225); color: rgb(87, 79, 235);"
/>
`;

exports[`props should render correctly with a font size CSS prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="font-size: 24px;"
/>
`;

exports[`props should render correctly with a font weight CSS prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="font-weight: 600;"
/>
`;

exports[`props should render correctly with a spacing CSS prop (marginX, paddingX) 1`] = `
<div
  class="css-view-1dbjc4n"
  style="margin-left: 32px; margin-right: 32px; padding-left: 16px; padding-right: 16px;"
/>
`;

exports[`props should render correctly with a spacing CSS prop (marginY, paddingY) 1`] = `
<div
  class="css-view-1dbjc4n"
  style="margin-bottom: 32px; margin-top: 32px; padding-bottom: 16px; padding-top: 16px;"
/>
`;

exports[`props should render correctly with a spacing CSS prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="margin: 32px 32px 32px 32px; padding-left: 16px;"
/>
`;

exports[`props should render correctly with a spacing CSS prop 2`] = `
<div
  class="css-view-1dbjc4n"
  style="margin: 32px 32px 32px 32px; padding-left: 16px;"
/>
`;

exports[`props should render correctly with height/width CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="height: 16px; width: 32px;"
/>
`;

exports[`props should render correctly with height/width CSS props 2`] = `
<div
  class="css-view-1dbjc4n"
  style="height: 16px; width: 8px;"
/>
`;

exports[`theming Box.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0);"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-family: inherit; font-size: 16px;"
  >
    hello world
  </div>
</div>
`;

exports[`theming Box.base should render correctly 2`] = `
<div
  class="css-view-1dbjc4n"
  style="color: rgb(87, 79, 235);"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-family: inherit; font-size: 16px;"
  >
    hello world
  </div>
</div>
`;

exports[`variants renders correctly for applyTheme 1`] = `
<div
  class="css-view-1dbjc4n"
  style="box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(255, 0, 0); padding: 16px 16px 16px 16px;"
/>
`;

exports[`variants renders correctly for overrides 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); padding: 16px 16px 16px 16px;"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-family: inherit; font-size: 16px;"
  >
    hello world
  </div>
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0);"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="color: rgb(33, 33, 33); font-family: inherit; font-size: 16px;"
  >
    hello world
  </div>
</div>
`;
